fix(icon): align to center (#197)

--- a/projects/ng-aquila/src/icon/icon.component.scss
+++ b/projects/ng-aquila/src/icon/icon.component.scss
@@ -12,6 +12,8 @@ $icon-outline-size-xl: 160px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  letter-spacing: normal;
+  text-align: center;
   width: 1em;
   height: 1em;
 
